--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
    <header class="cabecalho">
-    <h1>2Wheels</h1>
+    <h1>SpeckGaming</h1>
     <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">Procurar Motos </li>
+        <li class="cabecalho-lista-item">Procurar Periféricos</li>
         <li class="cabecalho-lista-item">Anuncie</li>
         <li class="cabecalho-lista-item">Login</li>
     <img class=center src="Titulo3.png"/>
