--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <li class="cabecalho-lista-item">Login</li>
     <img class=center src="Titulo3.png"/>
 
-    <img class=img src="Titulo4.png"/>
+    <img class=img src="placa-de-video-asrock-amd-radeon-rx-6600-cld-8g-8gb-90-ga2rzz-00uanf_1634738812_m.jpg"/>
 
-    <img class=moto src="Titulo5.png"/>
+    <img class=moto src="385cc5000035.jpg"/>
 
-    <img class=moto2 src="Titulo6.png"/>
+    <img class=moto2 src="teclado-hyperx-hx-60-ayo-pink-hxr-gkbd-572y6aa-aba_1659101565_m.jpg"/>
  
     </ul>
    </header>
